Some changes to index file

--- a/index.html
+++ b/index.html
@@ -152,16 +152,22 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
+		<!-- Work -->
+		<section id="work">
+			<div class="content-box">
+				<div class="content-title wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+					<h3>Our Work</h3>
+					<div class="content-title-underline"></div>
+				</div>
+			</div>
+			<div class="container">
+				<div class="row wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+					<div class="col-md-">
+		
+					</div>
+				</div>
+			</div> 
+		</section>	
 		<!-- jQuery -->
 		<script src="js/jquery.js"></script>
         <!-- Bootstrap JS -->
@@ -172,3 +178,5 @@
 		<script src="js/custom.js"></script>
 	</body>
 </html>
+}
+
