Addd imgages to work section

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 											eum ipsum tempora, quae dolorum consequuntur ex. Dignissimos id sunt quibusdam nisi numquam quisquam officia.</p>
 									</div>
 									<div id="about-button" class="animated wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-										<a href="#Work" class="btn btn-lg btn-general btn-blue" role="button">Our Work</a>
+										<a href="#work" class="btn btn-lg btn-general btn-blue" role="button">Our Work</a>
 									</div>
 								</div>
 							</div>
@@ -160,10 +160,63 @@
 					<div class="content-title-underline"></div>
 				</div>
 			</div>
-			<div class="container">
-				<div class="row wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-					<div class="col-md-">
-		
+			<div class="container-fluid">
+				<div class="row no-gutters wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+					<div class="col-md-3">
+						<div class="img-wrapper">
+							<a href="img/work/1.jpg" title="Work item">
+								<img src="img/work/1.jpg" alt="" class="img-responsive">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="img-wrapper">
+							<a href="img/work/2.jpg" title="Work item">
+								<img src="img/work/2.jpg" alt="" class="img-responsive">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="img-wrapper">
+							<a href="img/work/3.jpg" title="Work item">
+								<img src="img/work/3.jpg" alt="" class="img-responsive">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="img-wrapper">
+							<a href="img/work/4.jpg" title="Work item">
+								<img src="img/work/4.jpg" alt="" class="img-responsive">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="img-wrapper">
+							<a href="img/work/5.jpg" title="Work item">
+								<img src="img/work/5.jpg" alt="" class="img-responsive">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="img-wrapper">
+							<a href="img/work/6.jpg" title="Work item">
+								<img src="img/work/6.jpg" alt="" class="img-responsive">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="img-wrapper">
+							<a href="img/work/7.jpg" title="Work item">
+								<img src="img/work/7.jpg" alt="" class="img-responsive">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="img-wrapper">
+							<a href="img/work/8.jpg" title="Work item">
+								<img src="img/work/8.jpg" alt="" class="img-responsive">
+							</a>
+						</div>
 					</div>
 				</div>
 			</div> 
@@ -179,4 +232,3 @@
 	</body>
 </html>
 }
-
