Added section with carousel

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"> 
 		<!-- Animate CSS -->
 		<link rel="stylesheet" href="css/animate/animate.css">
+		<!-- Magnific-->
+		<link rel="stylesheet" href="css/magnificpopup/magnific-popup.css">
+		<!--Owl carousel-->
+		<link rel="stylesheet" href="css/owl-carousel/owl.carousel.min.css">
+		<link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
 		<!-- style CSS -->
 		<link rel="stylesheet" href="css/style.css">
 	</head>
@@ -221,8 +226,89 @@
 				</div>
 			</div> 
 		</section>	
+		<!-- $ -->
+		<section id="team">
+			<div class="content-box">
+				<div class="content-title wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+				   <h3>Our Team</h3>
+				   <div class="content-title-underline"></div>
+				</div>
+			</div>
+			<div class="container">
+				<div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+				   <div class="col-md-12">
+					   <div id="team-members" class="owl-carousel owl-theme">
+						   <div class="team-member">
+							   <img src="img/team/team-1.jpg" class="img-responsive" alt="team member">
+							   <div class="team-member-info text-center">
+									<h4 class="team-member-name">Monkey D luffy</h4>
+									<h4 class="team-member-designation">Capitan</h4>
+									<ul class="social-list">
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-facebook"></i></a></li>
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-twitter"></i></a></li>
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-google-plus"></i></a></li>
+									</ul>
+							   </div>
+						   </div>
+						   <div class="team-member">
+								<img src="img/team/team-2.jpg" class="img-responsive" alt="team member">
+								<div class="team-member-info text-center">
+									<h4 class="team-member-name">Namiy</h4>
+									<h4 class="team-member-designation">Navegante</h4>
+									<ul class="social-list">
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-facebook"></i></a></li>
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-twitter"></i></a></li>
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-google-plus"></i></a></li>
+									</ul>
+								</div>
+							</div>
+							<div class="team-member">
+								<img src="img/team/team-3.jpg" class="img-responsive" alt="team member">
+								<div class="team-member-info text-center">
+									<h4 class="team-member-name">Zoro</h4>
+									<h4 class="team-member-designation">Espadachin</h4>
+									<ul class="social-list">
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-facebook"></i></a></li>
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-twitter"></i></a></li>
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-google-plus"></i></a></li>
+									 </ul>
+								</div>
+							</div>
+							<div class="team-member">
+								<img src="img/team/team-4.jpg" class="img-responsive" alt="team member">
+								<div class="team-member-info text-center">
+									<h4 class="team-member-name">Tony Tony Chopper</h4>
+									<h4 class="team-member-designation">Doctor</h4>
+									<ul class="social-list">
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-facebook"></i></a></li>
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-twitter"></i></a></li>
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-google-plus"></i></a></li>
+									 </ul>
+								</div>
+							</div>
+							<div class="team-member">
+								<img src="img/team/team-5.jpg" class="img-responsive" alt="team member">
+								<div class="team-member-info text-center">
+									<h4 class="team-member-name">Sanji</h4>
+									<h4 class="team-member-designation">Cocinero</h4>
+									<ul class="social-list">
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-facebook"></i></a></li>
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-twitter"></i></a></li>
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-google-plus"></i></a></li>
+									 </ul>
+								</div>
+							</div>
+					   </div>
+				   </div>
+				</div>
+			</div> 
+		</section>
 		<!-- jQuery -->
 		<script src="js/jquery.js"></script>
+		<!--Owl Carousel-->
+		<script src="js/owl-carousel/owl.carousel.min.js"></script>
+		<!-- Magnific JS-->
+		<script src="js/magnificpopup/jquery.magnific-popup.min.js"></script>
         <!-- Bootstrap JS -->
         <script src="js/bootstrap/bootstrap.min.js"></script>
         <!-- Wow js -->
