--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta htt7http-equiv="X-UA-Compatible" content="IE-edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Modern Responsive Website</title>
+		<title>ISACA student group ITQ</title>
 		<!-- favicon -->
 		<link rel="shortcut icon" href="img/favicon.ico">
         <!-- Font -->
@@ -30,99 +30,37 @@
 				<div id="home-content-box">
 					<div id="home-content-box-inner" class="text-center">
 						<div id="home-heading" class="animated zoomIn">
-							<h3>Watch Out <br> The Modern Responsive Website:</h3>
+							<h3>Grupo de ISACA</h3>
 						</div>
 						<div id="home-button" class="animated zoomIn">
-							<a class="btn btn-lg btn-general btn-white" href="#work" role="button" title="View Our Work">View Our Work</a>
+							<a class="btn btn-lg btn-general btn-white" href="#work" role="button" title="View Our Work">Trabajos</a>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section id="services">
-			<div class="content-box">
-				<div class="content-title wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-					<h3>Services</h3>
-					<div class="content-title-underline"></div>
-				</div>
-				<div class="container">
-					<div class="row wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-						<div class="col-md-4">
-							<div class="service-item">
-								<div class="service-item-icon">
-									<i class="fa fa-paint-brush fa-3x"></i>
+		<section id="about">
+			<!-- about right side with diagonal BG parallax -->
+			<div id="about-bg-diagonal2" class="bg-parallax"></div>
+			<!-- About left side content-->
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4">
+						<div id="about-content-box">
+							<div id="about-content-box-outer">
+								<div id="about-content-box-inner">
+									<div class="content-title animated wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+										<h3>¿Que es ISACA?</h3>
+										<div class="content-title-underline"></div>
+									</div>
+									<div id="about-description" class="animated wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dicta repudiandae, quam sit natus id 
+											eum ipsum tempora, quae dolorum consequuntur ex. Dignissimos id sunt quibusdam nisi numquam quisquam officia.</p>
+									</div>
+									<div id="about-button" class="animated wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+										<a href="#work" class="btn btn-lg btn-general btn-blue" role="button">Our Work</a>
+									</div>
 								</div>
-								<div class="service-item-title">
-									<h3>Web Design</h3>
-								</div>
-								<div class="service-item-description">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-								</div>	
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="service-item">
-								<div class="service-item-icon">
-									<i class="fa fa-laptop fa-3x"></i>
-								</div>
-								<div class="service-item-title">
-									<h3>Web Debelopment</h3>
-								</div>
-								<div class="service-item-description">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-								</div>	
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="service-item">
-								<div class="service-item-icon">
-									<i class="fa fa-tablet fa-3x"></i>
-								</div>
-								<div class="service-item-title">
-									<h3>Mobile Apps</h3>
-								</div>
-								<div class="service-item-description">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-								</div>	
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="service-item">
-								<div class="service-item-icon">
-									<i class="fa fa-search fa-3x"></i>
-								</div>
-								<div class="service-item-title">
-									<h3>SEO Optimitation</h3>
-								</div>
-								<div class="service-item-description">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-								</div>	
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="service-item">
-								<div class="service-item-icon">
-									<i class="fa fa fa-pencil-square-o fa-3x"></i>
-								</div>
-								<div class="service-item-title">
-									<h3>UX Design</h3>
-								</div>
-								<div class="service-item-description">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-								</div>	
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="service-item">
-								<div class="service-item-icon">
-									<i class="fa fa-life-ring fa-3x"></i>
-								</div>
-								<div class="service-item-title">
-									<h3>Support</h3>
-								</div>
-								<div class="service-item-description">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-								</div>	
 							</div>
 						</div>
 					</div>
@@ -140,7 +78,7 @@
 							<div id="about-content-box-outer">
 								<div id="about-content-box-inner">
 									<div class="content-title animated wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-										<h3>About Vesco</h3>
+										<h3>¿Que hacemos?</h3>
 										<div class="content-title-underline"></div>
 									</div>
 									<div id="about-description" class="animated wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
@@ -230,7 +168,7 @@
 		<section id="team">
 			<div class="content-box">
 				<div class="content-title wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-				   <h3>Our Team</h3>
+				   <h3>Representantes</h3>
 				   <div class="content-title-underline"></div>
 				</div>
 			</div>
@@ -241,63 +179,34 @@
 						   <div class="team-member">
 							   <img src="img/team/team-1.jpg" class="img-responsive" alt="team member">
 							   <div class="team-member-info text-center">
-									<h4 class="team-member-name">Monkey D luffy</h4>
-									<h4 class="team-member-designation">Capitan</h4>
+									<h4 class="team-member-name">Lalo</h4>
+									<h4 class="team-member-designation">Presidente</h4>
 									<ul class="social-list">
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-facebook"></i></a></li>
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-twitter"></i></a></li>
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-google-plus"></i></a></li>
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+										
 									</ul>
 							   </div>
 						   </div>
 						   <div class="team-member">
 								<img src="img/team/team-2.jpg" class="img-responsive" alt="team member">
 								<div class="team-member-info text-center">
-									<h4 class="team-member-name">Namiy</h4>
-									<h4 class="team-member-designation">Navegante</h4>
+									<h4 class="team-member-name">Diego</h4>
+									<h4 class="team-member-designation">Secretario</h4>
 									<ul class="social-list">
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-facebook"></i></a></li>
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-twitter"></i></a></li>
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-google-plus"></i></a></li>
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 									</ul>
 								</div>
 							</div>
 							<div class="team-member">
-								<img src="img/team/team-3.jpg" class="img-responsive" alt="team member">
+								<img src="img/team/team-3.png" class="img-responsive" alt="team member">
 								<div class="team-member-info text-center">
-									<h4 class="team-member-name">Zoro</h4>
-									<h4 class="team-member-designation">Espadachin</h4>
+									<h4 class="team-member-name">Pablo</h4>
+									<h4 class="team-member-designation">Tesorero</h4>
 									<ul class="social-list">
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-facebook"></i></a></li>
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-twitter"></i></a></li>
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-google-plus"></i></a></li>
+										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 									 </ul>
 								</div>
-							</div>
-							<div class="team-member">
-								<img src="img/team/team-4.jpg" class="img-responsive" alt="team member">
-								<div class="team-member-info text-center">
-									<h4 class="team-member-name">Tony Tony Chopper</h4>
-									<h4 class="team-member-designation">Doctor</h4>
-									<ul class="social-list">
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-facebook"></i></a></li>
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-twitter"></i></a></li>
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-google-plus"></i></a></li>
-									 </ul>
-								</div>
-							</div>
-							<div class="team-member">
-								<img src="img/team/team-5.jpg" class="img-responsive" alt="team member">
-								<div class="team-member-info text-center">
-									<h4 class="team-member-name">Sanji</h4>
-									<h4 class="team-member-designation">Cocinero</h4>
-									<ul class="social-list">
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-facebook"></i></a></li>
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-twitter"></i></a></li>
-										<li><a href="#" class="social-icon icon-gray"> <i class="fa fa-google-plus"></i></a></li>
-									 </ul>
-								</div>
-							</div>
+							</div>		
 					   </div>
 				   </div>
 				</div>
