--- a/page1/index.html
+++ b/page1/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sub1</title>
+    <title>ISACA student group at ITQ</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <h1>Hola</h1>
+    <!-- Home -->
+    <section id="home">
+        <div class="home-container">
+            <div class="owl-carousel owl-theme">
+                <div class="item item1">
+                    <div class="out">
+                        <div class="transbox">
+                            <div class="transbox-in">
+                                <div class="title-slide">
+                                    <h2>Titulo de la imagen</h3>
+                                </div>
+                                <div class="content-slide">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis molestias facilis
+                                        quod commodi,
+                                        <br> officia illo nesciunt,ipsam corrupti quibusdam facere autem est sequi sint doloribusvr
+                                        <br> delectus, quam neque quae voluptates.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item item2">
+                    <h4>2</h4>
+                </div>
+                <div class="item item3">
+                    <h4>3</h4>
+                </div>
+                <div class="item item4">
+                    <h4>4</h4>
+                </div>
+            </div>
+        </div>
+    </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl-carousel/owl.carousel.min.js"></script>
+    <script src="js/custom.js"></script>
 </body>
+
 </html>
