--- a/page1/index.html
+++ b/page1/index.html
@@ -14,62 +14,15 @@
 
 <body>
     <!-- Home -->
-    <section id="home">
-        <div class="home-container">
-            <div class="owl-carousel owl-theme">
-                <div class="item item1">
-                    <div class="out">
-                        <div class="transbox">
-                            <div class="transbox-in">
-                                <div class="title-slide">
-                                    <h2>Titulo de la imagen</h3>
-                                </div>
-                                <div class="content-slide">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis molestias facilis
-                                        quod commodi,
-                                        <br> officia illo nesciunt,ipsam corrupti quibusdam facere autem est sequi sint doloribusvr
-                                        <br> delectus, quam neque quae voluptates.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item item2">
-
-                </div>
-                <div class="item item3">
-                    <div class="out">
-                        <div class="transbox">
-                            <div class="transbox-in">
-                                <div class="title-slide">
-                                    <h2>Titulo de la imagen</h3>
-                                </div>
-                                <div class="content-slide">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis molestias facilis
-                                        quod commodi,
-                                        <br> officia illo nesciunt,ipsam corrupti quibusdam facere autem est sequi sint doloribusvr
-                                        <br> delectus, quam neque quae voluptates.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>    
-                </div>
-                <div class="item item4">
-
-                </div>
+    <div class="jumbotron">
+        <div id="jumbo-transbox">
+            <div class="jumbo-transbox-in">
+                <img class="img-jumbotron" src="img/logo ITQ original.png" alt="ITQ logo">
+            <hr class="my-4">
+            <h1 > ISACA student group at ITQ</h1>
             </div>
         </div>
-    </section>
-    <section id="isaca">
-        <div class="container text-center">
-           <div class="row ">
-            <div class="col">
-                <h1 class="text-center">¿Qué es ISACA?</h1>
-                <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nesciunt fuga, id quae doloribus blanditiis iusto libero atque doloremque veritatis, veniam adipisci ad, eligendi voluptatibus dolores non sequi exercitationem. Ex!</p>
-            </div>
-           </div>
-        </div>
-    </section>
+    </div>
     <br>
     <br>
     <br>
@@ -90,10 +43,86 @@
     <br>
     <br>
     <br>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl-carousel/owl.carousel.min.js"></script>
-    <script src="js/custom.js"></script>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 
 </html>
