page1 added isaca section

--- a/page1/index.html
+++ b/page1/index.html
@@ -18,89 +18,65 @@
         <div id="jumbo-transbox">
             <div class="jumbo-transbox-in">
                 <img class="img-jumbotron" src="img/logo ITQ original.png" alt="ITQ logo">
-            <hr class="my-4">
-            <h1 > ISACA student group at ITQ</h1>
+                <hr class="my-4">
+                <h1> ISACA student group at ITQ</h1>
             </div>
         </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <section id="isaca">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="content-title">
+                        <h1 class="text-center">¿Que es ISACA?</h1>
+                    </div>
+                    <div class="content-title-line"></div>
+                    <div class="content text-justify">
+                        <p>ISACA fue conformada por personas que reconocieron la necesidad de contar con una fuente centralizada
+                            de información y guías en el creciente campo de la auditoría a los controles de los sistemas
+                            computacionales. Hoy, ISACA tiene más de 115,000 miembros en todo el mundo.
+                        </p>
+                        <p>
+                            ISACA comenzó en 1967, cuando un pequeño grupo de personas con trabajos similares—auditar controles en los sistemas computacionales
+                            que se estaban haciendo cada vez más críticos para las operaciones de sus respectivas organizaciones—se
+                            sentaron a discutir la necesidad de tener una fuente centralizada de información y guías en dicho
+                            campo. En 1969, el grupo se formalizó, incorporándose bajo el nombre de EDP Auditors Association
+                            (Asociación de Auditores de Procesamiento Electrónico de Datos). En 1976 la asociación formó
+                            una fundación de educación para llevar a cabo proyectos de investigación de gran escala para
+                            expandir los conocimientos y el valor en el campo de gobierno y control de TI. Conocida previamente
+                            como la Information Systems Audit and Control Association (Asociación de Auditoría y Control
+                            en Sistemas de Información), ISACA ahora es solo un acrónimo, que refleja la amplia gama de profesionales
+                            en gobierno de TI a los que sirve.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="content-title">
+                            <h3 class="text-center">Grupo de estudiantes de ISACA</h3>
+                    </div>
+                    <div class="content">
+                            <p class="text-justify">
+                                Ffomenta la educacion continua, así como el desarrollo
+                                personal y profecional más alla de lo que se aprende en clase.
+                            </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <h3 class="text-center">Objetivos</h3>
+                    <div class="content content-list">
+                        <ul>
+                            <li>Desarrollar un foro de aprendizaje fuera de clas</li>
+                            <li>Desarrollar practicas profecionales de redes</li>
+                            <li>Añadir expreciencia a tu CV</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <br>
     <br>
     <br>
