--- a/page1/index.html
+++ b/page1/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="content">
                             <p class="text-justify">
-                                Ffomenta la educacion continua, así como el desarrollo
+                                Fomenta la educacion continua, así como el desarrollo
                                 personal y profecional más alla de lo que se aprende en clase.
                             </p>
                     </div>
@@ -74,6 +74,35 @@
                         </ul>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="eventos">
+        <div class="container">
+                <div class="content-title">
+                        <h1 class="text-center">Eventos</h1>
+                    </div>
+                    <div class="content-title-line"></div>
+            <div class="row event-row tec ">
+                <div class="col-md-2 col-event" ></div>
+                <div class="col-md-6 col-event ">
+                        <div class="content-title">
+                                <h3 class="text-left">Evento num 1</h3>
+                        </div>
+                        <div class="event-description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Earum corrupti, quod omnis non harum magnam, nesciunt molestiae possimus, 
+                            rerum aliquam et excepturi ut quia magni quos distinctio! Quia, labore eos.
+                        </div>
+                        <div class="event-date">
+                            <span>Fecha: 20 de mayo 2018 15:30 </span>
+                        </div>
+                </div>
+                <div class="col-md-3 col-image col-event text-center">
+                    <img src="img/onechar.jpg" alt="evento 1">
+                </div>
+                <div class="col-md-1 col-event col-image" ></div>
             </div>
         </div>
     </section>
