events now responsive

--- a/page1/index.html
+++ b/page1/index.html
@@ -85,8 +85,7 @@
                     </div>
                     <div class="content-title-line"></div>
             <div class="row event-row tec ">
-                <div class="col-md-2 col-event" ></div>
-                <div class="col-md-6 col-event ">
+                <div class="col-md-8 col-event ">
                         <div class="content-title">
                                 <h3 class="text-left">Evento num 1</h3>
                         </div>
@@ -99,11 +98,43 @@
                             <span>Fecha: 20 de mayo 2018 15:30 </span>
                         </div>
                 </div>
-                <div class="col-md-3 col-image col-event text-center">
+                <div class="col-md-4 col-image">
                     <img src="img/onechar.jpg" alt="evento 1">
                 </div>
-                <div class="col-md-1 col-event col-image" ></div>
+                <div class="col-md-8 col-event ">
+                        <div class="content-title">
+                                <h3 class="text-left">Evento num 2</h3>
+                        </div>
+                        <div class="event-description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Earum corrupti, quod omnis non harum magnam, nesciunt molestiae possimus, 
+                            rerum aliquam et excepturi ut quia magni quos distinctio! Quia, labore eos.
+                        </div>
+                        <div class="event-date">
+                            <span>Fecha: 23 de mayo 2018 17:00 </span>
+                        </div>
+                </div>
+                <div class="col-md-4 col-image">
+                    <img src="img/bg-home2.jpg" alt="evento 2">
+                </div>
+                <div class="col-md-8 col-event ">
+                        <div class="content-title">
+                                <h3 class="text-left">Evento num 3</h3>
+                        </div>
+                        <div class="event-description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Earum corrupti, quod omnis non harum magnam, nesciunt molestiae possimus, 
+                            rerum aliquam et excepturi ut quia magni quos distinctio! Quia, labore eos.
+                        </div>
+                        <div class="event-date">
+                            <span>Fecha: 23 de mayo 2018 17:00 </span>
+                        </div>
+                </div>
+                <div class="col-md-4 col-image">
+                    <img src="img/bg-home.jpg" alt="evento 3">
+                </div>
             </div>
+            
         </div>
     </section>
     <br>
