--- a/page1/index.html
+++ b/page1/index.html
@@ -79,7 +79,7 @@
     </section>
 
     <section id="eventos">
-        <div class="container">
+        <div class="container-fluid containerone">
                 <div class="content-title">
                         <h1 class="text-center">Eventos</h1>
                     </div>
