--- a/page1/index.html
+++ b/page1/index.html
@@ -137,6 +137,8 @@
             
         </div>
     </section>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/custom.js"></script>
 </body>
 
 </html>
