--- a/page1/index.html
+++ b/page1/index.html
@@ -8,10 +8,6 @@
     <title>ISACA student group at ITQ</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
-    <!-- Animate CSS -->
-    <link rel="stylesheet" href="css/animate/animate.css">
-    <!-- Magnific-->
-    <link rel="stylesheet" href="css/magnificpopup/magnific-popup.css">
     <!--Owl carousel-->
     <link rel="stylesheet" href="css/owl-carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
@@ -108,7 +104,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-image">
-                    <img src="img/bg-home.jpg" alt="evento 1">
+                    <img src="img/bg-home.png" alt="evento 1">
                 </div>
                 <div class="col-md-8 col-event ">
                     <div class="content-title">
@@ -138,7 +134,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-image">
-                    <img src="img/bg-home.jpg" alt="evento 3">
+                    <img src="img/bg-home1.jpg" alt="evento 3">
                 </div>
             </div>
 
@@ -150,26 +146,8 @@
         </div>
         <div class="content-title-line"></div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <div class="container">
-            <div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+            <div class="row ">
                 <div class="col-md-12">
                     <div id="team-members" class="owl-carousel owl-theme">
                         <div class="team-member">
@@ -202,15 +180,37 @@
             </div>
         </div>
     </section>
+
+    <section id="join-us">
+        <!-- about right side with diagonal BG parallax -->
+        <div id="join-us-diagonal" class="bg-parallax"></div>
+        <!-- About left side content-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="join-us-box">
+                        <div id="join-us-box-outer">
+                            <div id="join-us-box-inner">
+                                <div class="content-title">
+                                    <h1 class="text-center">Unete!</h1>
+                                </div>
+                                <div class="content-title-line"></div>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dicta repudiandae, quam sit natus id 
+                                        eum ipsum tempora, quae dolorum consequuntur ex. Dignissimos id sunt quibusdam nisi numquam quisquam officia.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/jquery-3.3.1.min.js"></script>
     <!--Owl Carousel-->
     <script src="js/owl-carousel/owl.carousel.min.js"></script>
-    <!-- Magnific JS-->
-    <script src="js/magnificpopup/jquery.magnific-popup.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="js/bootstrap.min.js"></script>
-    <!-- Wow js -->
-    <script src="js/wow/wow.min.js"></script>
     <!-- custom JS -->
     <script src="js/custom.js"></script>
 </body>
