--- a/page1/index.html
+++ b/page1/index.html
@@ -126,10 +126,8 @@
     </section>
 
     <section id="join-us">
-        <!-- about right side with diagonal BG parallax -->
         <div id="join-us-diagonal" class="bg-parallax"></div>
-        <!-- About left side content-->
-        <div class="container">
+        <div class="container container-diagonal">
             <div class="row">
                 <div class="col-md-12">
                     <div id="join-us-box">
